--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -1,7 +1,7 @@
 banner:
   enable: true
   image: "images/banner.jpg"
-  contents: "_The best way to use external controls with your flight simulator_"
+  contents: "_Build your own flight sim cockpit — no coding required!_"
   button:
     contents: "Download"
     url: "#"
@@ -9,30 +9,27 @@ items:
   - type: highlights
     items_per_row: 3
     items:
-      - title: Free
+      - title: Easy setup, maximum control
         icon: fa-paper-plane
         content: >
-          Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl
-          amet mattis, sed a rutrum accumsan sed. Suspendisse eu.
-      - title: Open source
-        icon: fa-pencil-alt
+          No coding required! Connect your favorite switches, buttons, and displays to MobiFlight and start controlling your flight sim like a pro.
+      - title: Compatible with leading simulators
+        icon: fa-paper-plane
         content: >
-          Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl
-          amet mattis, sed a rutrum accumsan sed. Suspendisse eu.
-      - title: Amazing support
-        icon: fa-wrench
+          MobiFlight works seamlessly with Microsoft Flight Simulator, X-Plane, and more, bringing realistic cockpit interactions to your home setup.
+      - title: Open-source & community-driven
+        icon: fa-paper-plane
         content: >
-          Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl
-          amet mattis, sed a rutrum accumsan sed. Suspendisse eu.
+          Join a passionate global community of sim enthusiasts, tinkerers, and developers working together to push the limits of flight simulation hardware.
   - type: heading
-    heading: A gigantic heading you can use for whatever
-    contents: With a much smaller subtitle hanging out just below it
+    heading: Turn your flight sim dreams into reality with MobiFlight
+    contents: The open-source, plug-and-play solution for building custom cockpit hardware without coding.
   - type: posts
     #heading: Recent Posts
     content_type: posts
     max: 4
   - type: cta
-    contents: Are you ready to continue your quest?
+    contents: Get started now!
     button:
-      contents: Insert Coin
-      url: "#"
+      contents: Documentation
+      url: "https://docs.mobiflight.com/"
