--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,5 @@
       "other": "on"
     }
   },
-  "cSpell.words": ["minicockpit", "mobiflight", "neilenns"]
+  "cSpell.words": ["minicockpit", "mobiflight", "neilenns", "octavi"]
 }
