--- a/data/clients/core-flight-technologies.yaml
+++ b/data/clients/core-flight-technologies.yaml
@@ -1,3 +1,4 @@
 name: "Core Flight Technologies"
 image: "img/clients/core-flight-technologies.png"
 url: "https://coreflighttech.com/?ref=mobiflight"
+weight: 30
