--- a/data/sponsors/minicockpit.yaml
+++ b/data/sponsors/minicockpit.yaml
@@ -1,4 +1,4 @@
 name: "miniCOCKPIT"
-image: "img/clients/minicockpit.png"
+image: "img/sponsors/minicockpit.png"
 url: "https://www.minicockpit.com/"
 weight: 20
