--- a/data/sponsors/octavi.yaml
+++ b/data/sponsors/octavi.yaml
@@ -1,4 +1,4 @@
 name: "Octavi"
-image: "img/clients/octavi.png"
+image: "img/sponsors/octavi.png"
 url: "https://octavi.net/?ref=mobiflight"
 weight: 100
