--- a/data/sponsors/simionic.yaml
+++ b/data/sponsors/simionic.yaml
@@ -1,4 +1,4 @@
 name: "SIMiONIC"
-image: "img/clients/simionic.png"
+image: "img/sponsors/simionic.png"
 url: "https://www.simionic.net/?ref=mobiflight"
 weight: 10
