--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,12 @@
       "other": "on"
     }
   },
-  "cSpell.words": ["minicockpit", "mobiflight", "neilenns", "octavi"]
+  "cSpell.words": [
+    "isset",
+    "markdownify",
+    "minicockpit",
+    "mobiflight",
+    "neilenns",
+    "octavi"
+  ]
 }
